local/deployment_action.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: action-bazelgrpc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: action-bazelgrpc
  template:
    metadata:
      labels:
        app: action-bazelgrpc
    spec:
      containers:
        - name: action-bazelgrpc
          image: bazel/java/com/bazelgrpc/demo/services:actionservice_image
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
