local/deployment_gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-bazelgrpc
  namespace: bazelgrpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-bazelgrpc
  template:
    metadata:
      labels:
        app: gateway-bazelgrpc
    spec:
      containers:
        - name: gateway-bazelgrpc
          image: bazel/nodejs:gateway_image 
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
