local/deployment_poll.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-bazelgrpc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poll-bazelgrpc
  template:
    metadata:
      labels:
        app: poll-bazelgrpc
    spec:
      containers:
        - name: poll-bazelgrpc
          image: bazel/java/com/bazelgrpc/demo/services:pollservice_image
          imagePullPolicy: Never
          ports:
            - containerPort: 80
