local/service_action.yaml
apiVersion: v1
kind: Service
metadata:
  name: action-bazelgrpc
  namespace: bazelgrpc
spec:
  type: NodePort
  selector:
    app: action-bazelgrpc
  ports:
    - nodePort: 30000
      port: 8080
      targetPort: 80
