local/service_poll.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-bazelgrpc
spec:
  selector:
    app: poll-bazelgrpc
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
