local/action-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: action-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local-bazelgrpc.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: action-bazelgrpc
                port:
                  number: 80
